; ModuleID = '/home/carl/AnghaBench/lab/q3map2/common/extr_cmdlib.c_DefaultPath.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/common/extr_cmdlib.c_DefaultPath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DefaultPath(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca [128 x i8], align 16
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 0
  %8 = load i8, i8* %7, align 1
  %9 = sext i8 %8 to i32
  %10 = icmp eq i32 %9, 47
  br i1 %10, label %17, label %11

11:                                               ; preds = %2
  %12 = load i8*, i8** %3, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 0
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp eq i32 %15, 92
  br i1 %16, label %17, label %18

17:                                               ; preds = %11, %2
  br label %28

18:                                               ; preds = %11
  %19 = getelementptr inbounds [128 x i8], [128 x i8]* %5, i64 0, i64 0
  %20 = load i8*, i8** %3, align 8
  %21 = call i32 @strcpy(i8* %19, i8* %20)
  %22 = load i8*, i8** %3, align 8
  %23 = load i8*, i8** %4, align 8
  %24 = call i32 @strcpy(i8* %22, i8* %23)
  %25 = load i8*, i8** %3, align 8
  %26 = getelementptr inbounds [128 x i8], [128 x i8]* %5, i64 0, i64 0
  %27 = call i32 @strcat(i8* %25, i8* %26)
  br label %28

28:                                               ; preds = %18, %17
  ret void
}

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @strcat(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
